fix amplification table overlapping

--- a/frontend/stylesheets/amplification-chart.css.scss
+++ b/frontend/stylesheets/amplification-chart.css.scss
@@ -36,10 +36,12 @@
     }
   }
 
+  // $chart_section_width: 1024px - 
+
   .chart-section {
     display: inline-block;
     padding-right: 20px;
-    width: 1024px-340px; //340px width of table in the right
+    width: 684px; //340px width of table in the right
     vertical-align: top;
 
     $item_switch_gap: 70px;
